--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -10,8 +10,8 @@
 
   <div class="author__avatar">
       <img src="{{ author.avatar | prepend: '/images/' | prepend: base_path }}" alt="{{ author.name }}" 
-          data-hover="/images/xieyuser.jpg"     
-          data-normal="/images/xieyuser2.jpg">
+          data-hover="/images/XiaoZHOU0.jpg"     
+          data-normal="/images/XiaoZHOU1.jpg">
   </div>
   
   <script>
